--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andersonblasik/symmetrical-guacamole.git"
+    "url": "https://github.com/andersonblasik/symmetrical-guacamole.git"
   },
   "author": "",
   "license": "ISC",
